--- a/views/telegram_form.erb
+++ b/views/telegram_form.erb
@@ -7,6 +7,10 @@
         <textarea name="text" maxlength="1024" rows="7" required></textarea>
     </p>
     <p>
+        <label for="notice_ref_url_fld">Ссылка на материал:</label>
+        <input type="url" name="ref_url" id="notice_ref_url_fld" maxlength="256" required>
+    </p>
+    <p>
         <input type="submit" value="Готово">
     </p>
 </form>
